plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.7'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.server'
version = '1.0.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

jar {
	enabled = false  // 플레인 JAR 파일 생성을 비활성화
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Data JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Spring Web
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok' // Lombok 어노테이션 컴파일 시 처리

	// MySQL
	runtimeOnly 'com.mysql:mysql-connector-j'

	// SpringDoc (OpenAPI/Swagger for Spring Boot 3.x)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// Bean Validation을 위한 Hibernate Validator
	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'

	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher' // 테스트 런처 (IDE 연동 시 사용)
}

tasks.named('test') {
	useJUnitPlatform()
}
